changes for lp setup

--- a/readme-txt.html
+++ b/readme-txt.html
@@ -26,3 +26,6 @@ sudo npm install --save-dev gulp-minify-css
 
 
 website link: http://andwecode.com/better-frontend-with-gulp-and-bower/
+
+
+sudo npm install gulp gulp-sass gulp-uglify gulp-livereload bower gulp-rename gulp-minify-css gulp-concat gulp-sourcemaps
